# NeuroEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
contrib/simul/: Simulate_2nd_rank_system.m
include/cppapp/: smoke_test_all.h  smoke_test_diffsolve.h  smoke_test_find_minimum.h  smoke_test_integral.h  smoke_test_neuron.h  smoke_test_quick_descent.h
include/diffsolve/: diffsolve.h
include/integ/: integral.h
include/nnet/: neuron.h  neuron_line.h
include/noptim/: extreme.h  metrics.h  quick_descent.h
include/utils/: target_functions.h  tuple_utils.h
src/capp/: main.c
src/cppapp/: main.cpp  smoke_test_all.cpp  smoke_test_diffsolve.cpp  smoke_test_find_minimum.cpp  smoke_test_integral.cpp  smoke_test_neuron.cpp  smoke_test_quick_descent.cpp
src/diffsolve/: diffsolve.cpp
src/nnet/: neuron.cpp
src/noptim/: quick_descent.cpp
